--- a/Phase_3.ipynb
+++ b/Phase_3.ipynb
@@ -30,7 +30,7 @@
    "id": "1f06ff04-d608-4e8f-ab6b-b68f9b2b666f",
    "metadata": {},
    "source": [
-    "## Que 1"
+    "## PART 1"
    ]
   },
   {
@@ -148,7 +148,7 @@
    "id": "ebffdab0-4d6e-48ef-8dc0-24c46cbc3b94",
    "metadata": {},
    "source": [
-    "## Que 2"
+    "## PART 2"
    ]
   },
   {
@@ -227,7 +227,7 @@
    "id": "1d6926b7-3115-4127-a6e6-5c33b44c3e35",
    "metadata": {},
    "source": [
-    "### Que 3"
+    "### PART 3"
    ]
   },
   {
@@ -333,7 +333,7 @@
    "id": "8f8d9aeb-30f0-4fc3-a2bd-597c39ab862c",
    "metadata": {},
    "source": [
-    "### Que 4"
+    "### PART 4"
    ]
   },
   {
@@ -419,7 +419,7 @@
    "id": "fb961576-e1cf-4044-b800-6f490d1b4422",
    "metadata": {},
    "source": [
-    "### Que 5"
+    "### PART 5"
    ]
   },
   {
@@ -508,7 +508,7 @@
    "id": "e5c01b0c-83b8-4bdb-a676-85211a7f5caa",
    "metadata": {},
    "source": [
-    "### Que 6"
+    "### PART 6"
    ]
   },
   {
@@ -564,7 +564,7 @@
    "id": "25117085-e0f8-470c-a489-dab47121805e",
    "metadata": {},
    "source": [
-    "### Que 7\n"
+    "### PART 7\n"
    ]
   },
   {
